# web_crawler

./: .env_example  .gitignore  README.md  daily_chat_room.py  docker-compose.yml  embedding_model.py  embeddings_utils.py  googlellmsvcwrapper.py  movie_chatbot.py  pyproject.toml  rag_chatbot_server.py  rag_processor.py  runner.py  simple.py  simple_chatbot.py  simple_chatbot_daily.py  test.py  workflow.excalidraw
test_code/: test_tool_retriever.py
